--- a/index.html
+++ b/index.html
@@ -3,37 +3,43 @@
   <head>
     <meta charset="utf-8" />
     <title>Mi modelo 3D</title>
+    <!-- A-Frame primero -->
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <!-- Orbit Controls después -->
+    <script src="https://cdn.jsdelivr.net/gh/c-frame/aframe-orbit-controls-component@1.3.0/dist/aframe-orbit-controls-component.min.js"></script>
   </head>
   <body>
     <a-scene>
+      <!-- Assets -->
       <a-assets>
         <a-asset-item id="modelo" src="modelo.glb"></a-asset-item>
         <img id="fondo" src="fondo.jpg" />
       </a-assets>
 
+      <!-- Fondo -->
       <a-sky src="#fondo" color="#F0F0F0"></a-sky>
 
+      <!-- Modelo 3D (BAJADO) -->
       <a-entity
         gltf-model="#modelo"
-        position="0 0.2 0"
-        scale="1 1 1"
+        position="0 0 1"  <!-- Bajamos el modelo -->
+        scale="0.4 0.4 0.4"
         rotation="0 180 0"
         material="metalness: 1; roughness: 0.2; specular: #ffffff; specularIntensity: 0.5;"
       ></a-entity>
 
-      <a-entity position="0 1.1 0">
-        <a-camera wasd-controls-enabled="true" look-controls="true"></a-camera>
+      <!-- Cámara con controles de órbita (más alejada) -->
+      <a-entity
+        id="cameraRig"
+        position="0 1.6 10"  <!-- Cámara más lejos -->
+        orbit-controls="target: 0 1 0; enableDamping: true; dampingFactor: 0.125; rotateSpeed: 0.1; zoomSpeed: 0.5; minDistance: 3; maxDistance: 50;"
+      >
+        <a-camera></a-camera>
       </a-entity>
 
+      <!-- Iluminación -->
       <a-light type="ambient" color="#FAF9F6" intensity="0.7"></a-light>
-
-      <a-light
-        type="directional"
-        position="1 3 2"
-        intensity="2"
-        color="#ffffff"
-      ></a-light>
+      <a-light type="directional" position="1 3 2" intensity="2" color="#ffffff"></a-light>
     </a-scene>
   </body>
 </html>
