--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <a-sky src="#fondo" color="#F0F0F0"></a-sky>
 
       <!-- Modelo 3D (BAJADO) -->
-      <a-entity
-        gltf-model="#modelo"
-        position="0 0 0.1"  <!-- Bajamos el modelo -->
-        scale="0.1 0.1 0.1"
-        rotation="0 180 0"
-        material="metalness: 1; roughness: 0.2; specular: #ffffff; specularIntensity: 0.5;"
-      ></a-entity>
+     <a-entity
+  gltf-model="#modelo"
+  position="0 -0.5 0"  <!-- más abajo -->
+  scale="0.07 0.07 0.07"  <!-- escala más pequeña -->
+  rotation="0 180 0"
+  material="metalness: 1; roughness: 0.2; specular: #ffffff; specularIntensity: 0.5;"
+></a-entity>
 
       <!-- Cámara con controles de órbita (más alejada) -->
       <a-entity
